--- a/Backend/EJS/4.4 Band Generator Project/views/index.ejs
+++ b/Backend/EJS/4.4 Band Generator Project/views/index.ejs
@@ -7,12 +7,13 @@
     Show the default h1 below -->
 
     <% if(locals.adjective && local.noun) { %> 
+      
       <h1>
         <%= adjective %>
           <%= noun %>
       </h1>
       <% } else { %>
-        <h1>Welcome to the Band Generator</h1>
+        <h1>Welcome to the Band Generator 🤟</h1>
         <% } %>
 
 <form action="/submit" method="POST">
